--- a/CheezUploader/Web.config
+++ b/CheezUploader/Web.config
@@ -11,6 +11,8 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true"/>
 
 		<add key="UploadDirectory" value="~/Content/Uploads/"/>
+		<add key="MaxHeight" value="700"/>
+		<add key="MaxWidth" value="500"/>
 	</appSettings>
 		
 	<system.web>
